# podcraft-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api-host/: Dockerfile  README.md
apps/api-host/src/api_host/: main.py
apps/api-host/src/api_host/agents/: read_aloud_text_preparer.py  script_agent.py
apps/api-host/src/api_host/api/: podcast_routes.py  request_validation.py
apps/api-host/src/api_host/clients/: audio_mcp_client.py  document_mcp_client.py  errors.py  translation_mcp_client.py
apps/api-host/src/api_host/config/: __init__.py  env.py
apps/api-host/src/api_host/schemas/: podcast_schemas.py
apps/api-host/src/api_host/services/: podcast_pipeline.py
apps/api-host/tests/: test_audio_mcp_client.py  test_document_mcp_client.py  test_podcast_pipeline.py  test_podcast_routes.py  test_read_aloud_text_preparer.py  test_request_validation.py  test_script_generation.py  test_translation_mcp_client.py
apps/web-angular/: Dockerfile  README.md  angular.json  package.json  proxy.conf.json  proxy.docker.conf.json  tsconfig.json
apps/web-angular/src/: index.html  main.ts  styles.scss
apps/web-angular/src/app/: app.component.ts  app.config.ts
docs/: architecture.md  local-development.md  mcp-flow.md  portfolio-notes.md
services/audio-mcp-server/: README.md
services/audio-mcp-server/src/audio_mcp_server/: server.py
services/audio-mcp-server/src/audio_mcp_server/config/: __init__.py
services/audio-mcp-server/src/audio_mcp_server/tools/: audio_metadata.py  generate_audio.py  save_audio_file.py
services/audio-mcp-server/src/audio_mcp_server/tts/: __init__.py  errors.py  factory.py  mock_provider.py  openai_provider.py  provider.py
services/audio-mcp-server/tests/: test_audio_server.py  test_generate_audio.py  test_openai_provider.py
services/document-mcp-server/: README.md
services/document-mcp-server/src/document_mcp_server/: server.py
services/document-mcp-server/tests/: pdf_test_utils.py  test_clean_text.py  test_extract_pdf_text.py  test_payload_encoding.py  test_server.py
services/translation-mcp-server/: README.md
services/translation-mcp-server/src/translation_mcp_server/: server.py
services/translation-mcp-server/tests/: test_language_detection.py  test_translate_text.py  test_translation_server.py
(+27 files in other folders)
