[project]
name = "podcraft-ai"
version = "0.1.0"
description = "Agentic AI app that transforms text and PDF documents into podcast-style audio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pypdf>=6.0.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.32.0"
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = [
  "apps/api-host/tests",
  "services/document-mcp-server/tests",
  "services/audio-mcp-server/tests"
]
pythonpath = [
  "apps/api-host/src",
  "services/document-mcp-server/src",
  "services/audio-mcp-server/src"
]
